--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.7.2
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
+cryptography==42.0.5
 Django==4.2.7
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
 idna==3.6
-psycopg2==2.9.9
+pycparser==2.22
+PyMySQL==1.1.0
 python-dotenv==1.0.0
 pytz==2024.1
 requests==2.31.0
