Созданы модели и модели для отображения в админ-панели Джанго

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+core/migrations/
 
 # Flask stuff:
 instance/
@@ -126,7 +127,6 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-
 # Spyder project settings
 .spyderproject
 .spyproject
